# mso-website

./: .env.template  .gitignore  Dockerfile  README.md  manage.py  package-lock.json  pyproject.toml  test_cases.txt
home/: models.py
home/migrations/: 0003_homepage_hero_text.py  0004_homepage_body_homepage_hero_cta_and_more.py  0005_remove_homepage_hero_cta_and_more.py  0006_alter_homepage_hero_text.py  0007_alter_homepage_body.py  0008_rename_homepage_defaultpage.py  0009_formpage_formfield.py
home/static/css/: welcome_page.css
home/templates/home/: aksjonsuke_page.html  bestilling_page.html  default_page.html  evaluering_page.html  form_page.html  form_page_landing.html  hjem_page.html  home_page.html  spoross_page.html  styret_page.html
management/: forms.py  models.py  urls.py  views.py  wagtail_hooks.py
management/migrations/: 0001_initial.py  0002_profile_timer_alter_profile_user.py  0003_alter_profile_kjønn.py  0004_remove_profile_over_72h.py  0005_job.py  0006_remove_job_assigned_to_job_assigned_to_f_and_more.py  0007_alter_profile_kjønn.py  0008_remove_job_assigned_to_f_remove_job_assigned_to_m_and_more.py  0009_job_job_is_completed.py  0010_profile_days_since_last_job_profile_last_job_date.py  0011_rename_days_since_last_job_profile_months_since_last_job.py
management/templates/: management-base.html  management.html
management/templates/management/: admin.html  jobs.html  login.html  my_assigned_jobs.html  profile.html
mso_website/: urls.py  wsgi.py
mso_website/settings/: base.py  dev.py
mso_website/templates/: base.html
(+4 files in other folders)
